<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoConnectionActivity"
   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnRetry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_textSize"
                android:layout_gravity="center_horizontal"
                android:drawableTop="@drawable/ic_info_black_24dp"
                android:text="@string/no_connection"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/large_textSize"
                android:text="@string/msg_please_check_your_internet"
                android:layout_marginTop="@dimen/dimen_8dp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnRetry"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/retry"
        android:textSize="@dimen/large_textSize"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>
