<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBackground"
    android:orientation="vertical"
    tools:context=".AddDrumActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:layout_below="@id/app_bar_layout"
        android:padding="@dimen/dimen_8dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_8dp">

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <RadioButton
                        android:id="@+id/rbInProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:buttonTint="@color/colorGreen"
                        android:checked="true"
                        android:text="@string/inprocess"
                        android:textSize="@dimen/mid_textSize" />

                    <RadioButton
                        android:id="@+id/rbFinish"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_8dp"
                        android:buttonTint="@color/colorRed"
                        android:text="@string/finish"
                        android:textSize="@dimen/mid_textSize" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvMonth"
                    style="@style/SpinnerBack"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:text="@string/selected_month"
                    android:textAlignment="center"
                    android:textSize="@dimen/large_textSize" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_drumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDrumNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/drum_number"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="50"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text"
                    tools:maxLength="100" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_cabelsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCabelSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cable_size"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etJobNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_jobno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etJobNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/job_number"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etMeter"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etMeter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/meter"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etRemark"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/remark"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etcomment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comment"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etStage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/stage"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_condType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etcondType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/condType"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/location"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/update"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3"
                    android:nextFocusDown="@+id/etDrumNo"
                    android:padding="8dp"
                    android:textColor="@drawable/hint_text" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>