<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchListActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:queryHint="Search By Drum Number" />

        <TextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:lines="2"
            android:text="@string/advance_filter"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mid_textSize" />

        <ImageView
            android:id="@+id/ivFilter"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:src="@drawable/advance_filter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8dp">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:textAlignment="center">

            <RadioButton
                android:id="@+id/rbInProgress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorGreen"
                android:checked="true"
                android:text="@string/inprocess"
                android:textSize="@dimen/mid_textSize" />

            <RadioButton
                android:id="@+id/rbFinish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:buttonTint="@color/colorRed"
                android:text="@string/finish"
                android:textSize="@dimen/mid_textSize" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvMonth"
            style="@style/SpinnerBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:text="@string/selected_month"
            android:textAlignment="center"
            android:textSize="@dimen/large_textSize" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGrey" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvChipView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="#ffffff"
        android:padding="@dimen/dimen_8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableLeft="@drawable/ic_info_black_24dp"
        android:drawablePadding="@dimen/dimen_4dp"
        android:text="@string/no_data_found"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/large_textSize"
        android:textStyle="bold" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
