<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_8dp"
    android:orientation="vertical"
   >

    <LinearLayout
        android:id="@+id/llDrumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_weight="0.5"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/drum_number"
            android:textSize="@dimen/small_textSize"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvDrumNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.55"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textSize="@dimen/mid_textSize"
            android:textStyle="bold"
            android:textColor="#90000000"
            />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_edit_black_24dp"
            android:background="@drawable/square"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_weight="0.3"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/cable_size"
            android:textSize="@dimen/small_textSize" />

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textSize="@dimen/small_textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_weight="0.3"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/meter"
            android:textSize="@dimen/small_textSize" />

        <TextView
            android:id="@+id/tvMeter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textSize="@dimen/small_textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_weight="0.3"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/update"
            android:textSize="@dimen/small_textSize" />

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textSize="@dimen/small_textSize" />

    </LinearLayout>


</LinearLayout>