<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_512" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="100"
                    android:padding="@dimen/dimen_8dp"
                    android:textSize="@dimen/large_textSize"
                    tools:maxLength="100" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_email"
                android:layout_marginTop="@dimen/dimen_4dp"
                app:passwordToggleEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etEmail"
                    android:padding="@dimen/dimen_8dp"
                    android:textSize="@dimen/large_textSize" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                style="@style/buttonStyle"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/login" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
